--- a/aaamain/configs/config.yml
+++ b/aaamain/configs/config.yml
@@ -1,3 +1,23 @@
-# just put downloads in /tmp?
-downloadloc: /root/minecraft-panel/aaamain/downloads/
+downloadloc: /root/minecraft-panel/aaamain/downloads/ # just put downloads in /tmp?
 serverloc: /root/minecraft-panel/aaamain/servers/
+
+backup_dir: /root/minecraft-panel/backups
+
+servers:
+  proxy:
+  - "proxy-1"
+  spigot:
+  - "testing"
+  - "economy-1"
+  standalone: # servers which are not started with start-all command
+  - ""
+
+
+firewall:
+  allow-ports: "21 22 80 443 25565"
+  whitelisted-server-ips: "127.0.0.1"
+  bungee-backend-ports: "25570 30000" # This should be auto done when starting / creating a server which is bungee compatible.
+
+web-shortner:
+  location: /var/www/html/l
+  domain: "reece.sh/l"
