--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,5 +1,5 @@
 ## INSTALL
-# pip install -r requirements.txt
+# pip install -r requirements/requirements.txt
 
 ## UPDATE DEENDS
 # python -m pip install pipreqs && pipreqs .
@@ -7,3 +7,4 @@
 pyfiglet
 pyyaml
 pyufw # sudo apt-get install ufw
+pick  # https://github.com/wong2/pick
