--- a/config.yml
+++ b/config.yml
@@ -7,13 +7,14 @@ servers:
   - proxy
   spigot:
   - testing
+  - hub3
   standalone:
   - ''
 akash-servers:
-  reece-test-akash-1: 
-    dseq: 5753968 # Akashalytics raw_data panel
-    owner: "akash1rpv97xasy7px29ccdhy93ar6aj0t8a6895d4n3"
-    provider: "akash1r7y2msa9drwjss5umza854he5vwr2czunye9de"
+  reece-test-akash-1:
+    dseq: 5753968
+    owner: akash1rpv97xasy7px29ccdhy93ar6aj0t8a6895d4n3
+    provider: akash1r7y2msa9drwjss5umza854he5vwr2czunye9de
 firewall:
   allow-ports:
   - 21
